# nerf-pytorch

./: CMakeLists.txt  README.md  analyze_colmap_quality.py  load_llff.py  run.ipynb  run_nerf copy.py  visualize_cameras.py
camper_nerf_project/: README.md  check_file_matching.py  colmap2nerf.py  colmap2nerf_fixed.py  colmap_nerf_pipeline.py  config.py  debug_colmap_structure.py  fix_filename_mapping.py  requirements.txt  run_pipeline.sh  run_pipeline_headless.sh  test_api_directly.py  test_existing_validator.py  test_fixed_system.py  test_fixed_validator.py  test_setup.py  test_validation_details.py
camper_nerf_project/camper_nerf/colmap_output/1/: project.ini
camper_nerf_project/camper_nerf/colmap_output/sparse/0/: cameras.txt  points3D.txt  project.ini
camper_nerf_project/camper_nerf/nerf_data/: transforms.json  transforms_old.json
camper_nerf_project/data_validation/: README.md  app.py  requirements.txt
camper_nerf_project/data_validation/static/css/: style.css
camper_nerf_project/data_validation/static/js/: main.js
camper_nerf_project/data_validation/templates/: debug.html  index.html  simple_test.html  test.html
camper_nerf_project/data_validation/validators/: data_validator.py
configs/: camper.txt  camper_clean.txt  camper_fixed.txt  lego.txt
examples/: train.cpp
include/nerf/: dataset.hpp  model.hpp  renderer.hpp
outputs/camera_analysis/: camera_analysis_report.md
src/: dataset.cpp  model.cpp  renderer.cpp
tools/: README.md
tools/analysis/: check_coordinate_conversion.py  visualize_cameras.py
